--- a/login/css/form-elements.css
+++ b/login/css/form-elements.css
@@ -1,14 +1,16 @@
 
-input[type="text"], 
-input[type="password"], 
-textarea, 
+input[type="text"],
+input[type="password"],
+input[type="email"],
+select,
+textarea,
 textarea.form-control {
 	height: 50px;
-    margin: 0;
+    margin-top: -10px;
     padding: 0 20px;
     vertical-align: middle;
     background: #fff;
-    border: 3px solid #fff;
+    border: 1px solid #ccc;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 300;
@@ -18,36 +20,40 @@ textarea.form-control {
     -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
     -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
 }
-
-textarea, 
+input[type="file"]{
+	outline: none;
+	opacity: 0;
+}
+textarea,
 textarea.form-control {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	line-height: 30px;
 }
 
-input[type="text"]:focus, 
-input[type="password"]:focus, 
-textarea:focus, 
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+textarea:focus,
 textarea.form-control:focus {
 	outline: 0;
 	background: #fff;
-    border: 3px solid #fff;
+    border: 1px solid #ccc;
     -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
 }
 
-input[type="text"]:-moz-placeholder, input[type="password"]:-moz-placeholder, 
+input[type="text"]:-moz-placeholder, input[type="password"]:-moz-placeholder, input[type="email"]:-ms-input-placeholder,
 textarea:-moz-placeholder, textarea.form-control:-moz-placeholder { color: #888; }
 
-input[type="text"]:-ms-input-placeholder, input[type="password"]:-ms-input-placeholder, 
+input[type="text"]:-ms-input-placeholder, input[type="password"]:-ms-input-placeholder, input[type="email"]:-ms-input-placeholder,
 textarea:-ms-input-placeholder, textarea.form-control:-ms-input-placeholder { color: #888; }
 
-input[type="text"]::-webkit-input-placeholder, input[type="password"]::-webkit-input-placeholder, 
+input[type="text"]::-webkit-input-placeholder, input[type="password"]::-webkit-input-placeholder, input[type="email"]:-ms-input-placeholder,
 textarea::-webkit-input-placeholder, textarea.form-control::-webkit-input-placeholder { color: #888; }
 
 
 
-button.btn {
+button.btn, input[type="submit"], .botones{
 	height: 50px;
     margin: 0;
     padding: 0 20px;
@@ -65,10 +71,10 @@ button.btn {
     -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
 }
 
-button.btn:hover { opacity: 0.6; color: #fff; }
+button.btn:hover, input[type="submit"]:hover { opacity: 0.6; color: #fff; }
 
-button.btn:active { outline: 0; opacity: 0.6; color: #fff; -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none; }
+button.btn:active,  input[type="submit"]:active { outline: 0; opacity: 0.6; color: #fff; -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none; }
 
-button.btn:focus { outline: 0; opacity: 0.6; background: #52b6ec; color: #fff; }
+button.btn:focus,  input[type="submit"]:focus { outline: 0; opacity: 0.6; background: #52b6ec; color: #fff; }
 
-button.btn:active:focus, button.btn.active:focus { outline: 0; opacity: 0.6; background: #52b6ec; color: #fff; }
+button.btn:active:focus, button.btn.active:focus,  input[type="submit"]:active:focus,  input[type="submit"].active:focus { outline: 0; opacity: 0.6; background: #52b6ec; color: #fff; }
