--- a/login/css/style.css
+++ b/login/css/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -45,10 +44,16 @@ img { max-width: 100%; }
 
 .top-content .text {
 	color: #fff;
+    text-align: center;
 }
 
-.top-content .text h1 { color: #fff; }
-
+.top-content .text h1 {
+    color: #fff;
+    text-align: center;
+}
+.label{
+    color: #fff;
+}
 .top-content .description {
 	margin: 20px 0 10px 0;
 }
@@ -58,7 +63,7 @@ img { max-width: 100%; }
 .top-content .description a {
 	color: #fff;
 }
-.top-content .description a:hover, 
+.top-content .description a:hover,
 .top-content .description a:focus { border-bottom: 1px dotted #fff; }
 
 .form-box {
@@ -100,6 +105,7 @@ img { max-width: 100%; }
 	background: rgba(0, 0, 0, 0.3);
 	-moz-border-radius: 0 0 4px 4px; -webkit-border-radius: 0 0 4px 4px; border-radius: 0 0 4px 4px;
 	text-align: left;
+    height: auto;
 }
 
 .form-bottom form textarea {
@@ -131,17 +137,93 @@ img { max-width: 100%; }
 
 @media (min-width: 992px) and (max-width: 1199px) {}
 
-@media (min-width: 768px) and (max-width: 991px) {}
+@media (min-width: 768px) {
+
+    .col-sm-offset-3{
+        /*margin-left: 5%;*/
+        width: 65%;
+        clear: both;
+    }
+    .bloque_izquierda{
+        float: left;
+    }
+    .bloque_derecha{
+        float: left;
+        margin: 0 0 10px 10px;
+    }
+
+    .botones{
+        clear: both;
+        width: 100%;
+    }
+    .text{
+        text-align: center;
+    }
+    .map{
+        width:430px;
+        height:440px;
+    }
+}
 
 @media (max-width: 767px) {
-	
+
 	.inner-bg { padding: 60px 0 110px 0; }
 
 }
 
-@media (max-width: 415px) {
-	
-	h1, h2 { font-size: 32px; }
+@media (max-width: 768px){
 
+    .col-sm-offset-3{
+        /*margin-left: 5%;*/
+        width: 100%;
+        clear: both;
+    }
+    .bloque_izquierda{
+        float: left;
+    }
+    .bloque_derecha{
+        float: left;
+        margin: 0 0 10px 10px;
+    }
+
+    .botones{
+        clear: both;
+        width: 100%;
+    }
+    .text{
+        text-align: center;
+    }
+    .map{
+        width:430px;
+        height:440px;
+    }
+    	h1, h2 { font-size: 32px; }
+}
+.label_error{
+	float: left;
+	clear: both;
+	display: none;
+	position: relative;
+	padding: 10px;
+    margin-left: -280px;
+	margin-bottom: 5px;
+	background: #f2dede;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	color: #b94a48;
+    width: 258px;
 }
 
+.label_error:after{
+	content: '';
+	position: absolute;
+	border-style: solid;
+	border-width: 9px 0 9px 16px;
+	border-color: transparent #f2dede;
+	display: block;
+	width: 0;
+	z-index: 1;
+	right: -16px;
+	top: 24px;
+}
